kubernetes/apps/observability/victoria-metrics/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-canonical
spec:
  hostnames:
    - alertmanager.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: vmalertmanager-vmks
          port: 9093
